# resumeai-IQ

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
AI/: README.md
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260608_01_create_users_table.py
apps/backend/src/resumeiq_api/: main.py
apps/backend/src/resumeiq_api/ai/: policies.py
apps/backend/src/resumeiq_api/core/: auth.py  config.py  errors.py  logging.py  middleware.py
apps/backend/src/resumeiq_api/db/: base.py  session.py
apps/backend/src/resumeiq_api/infra/: celery_app.py
apps/backend/src/resumeiq_api/models/: __init__.py  user.py
apps/backend/src/resumeiq_api/routers/: __init__.py  auth.py  health.py  router.py  system.py  users.py
apps/backend/src/resumeiq_api/schemas/: auth.py  common.py  health.py  system.py  user.py
apps/backend/src/resumeiq_api/services/: system_service.py  user_service.py
apps/backend/tests/: test_health.py
apps/frontend/: .env.example  components.json  jest.config.ts  next.config.ts  package.json  proxy.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/app/dashboard/: layout.tsx  page.tsx
apps/frontend/app/sign-in/[[...sign-in]]/: page.tsx
apps/frontend/app/sign-up/[[...sign-up]]/: page.tsx
apps/frontend/src/lib/: api.ts  env.ts
docs/phases/: phase-01-foundation.md
infrastructure/docker/: api.Dockerfile  web.Dockerfile
(+7 files in other folders)
